@@ -1,12 +1,21 @@
 {
-  "timestamp" : "2025-02-15T01:03:16Z",
+  "timestamp" : "2025-02-16T01:09:26Z",
   "count_outdated" : 93,
   "uniques_outdated" : 75,
-  "count" : 94,
-  "uniques" : 76,
+  "count" : 95,
+  "uniques" : 77,
   "clones" : [
     {
       "timestamp": "2025-02-14T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-02-15T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
